// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> it renders with addition 1`] = `
<h1
  className="mfui-header mfui-header_color_black mfui-header_level_h1 mfui-header_h-align_inherit"
>
  <div
    className="mfui-header__addition"
  >
    <div />
  </div>
</h1>
`;

exports[`<Header /> it renders with children 1`] = `
<h1
  className="mfui-header mfui-header_color_black mfui-header_level_h1 mfui-header_h-align_inherit"
>
  <section />
</h1>
`;

exports[`<Header /> it renders with className 1`] = `
<h1
  className="mfui-header mfui-header_color_black mfui-header_level_h1 mfui-header_h-align_inherit class"
/>
`;

exports[`<Header /> it renders with classNames array 1`] = `
<h1
  className="mfui-header mfui-header_color_black mfui-header_level_h1 mfui-header_h-align_inherit class1 class2"
/>
`;

exports[`<Header /> it renders with data attributes 1`] = `
<h1
  className="mfui-header mfui-header_color_black mfui-header_level_h1 mfui-header_h-align_inherit"
  data-test="test"
/>
`;

exports[`<Header /> it renders with text align center 1`] = `
<h1
  className="mfui-header mfui-header_color_black mfui-header_level_h1 mfui-header_h-align_center"
/>
`;

exports[`<Header /> it renders with white color class 1`] = `
<h1
  className="mfui-header mfui-header_color_white mfui-header_level_h1 mfui-header_h-align_inherit"
/>
`;

exports[`<Header /> it renders without class margin 1`] = `
<h1
  className="mfui-header mfui-header_color_black mfui-header_level_h1 mfui-header_h-align_inherit"
/>
`;
